# RGB_Thermal_Fusion__C__

./: .gitignore  CMakeLists.txt  README.md
apps/cli/: main.cpp
apps/gui_qt/: MainWindow.cpp  MainWindow.hpp  main.cpp
data/00006/: conditions.txt  groundTruth.txt
data/00010/: conditions.txt  groundTruth.txt
include/: msgf.hpp  rgf.hpp  te_rgf_rgb.hpp  triage_metrics.hpp
src/: msgf.cpp  rgf.cpp  run_triage.cpp  te_rgf_rgb.cpp  triage_metrics.cpp
